# castwright

./: .jiu.toml  .markdownlint.jsonc  Cargo.toml  DEV.md  README.md  REFERENCE.md  demo.cast  demo.cw  demo.cwrt  demo.cwsh  justfile
.github/workflows/: release.yml
doc/: CAVEATS.md  CONTRIBUTING.md  DEV.md  REFERENCE.md
scripts/: bump-version.sh  format.sh  run.sh  version.sh
src/: cwsh.rs  error.rs  lib.rs  main.rs  shell.rs  util.rs
src/asciicast/: event.rs  header.rs  mod.rs
src/instruction/: command.rs  config.rs  empty.rs  frontmatter.rs  marker.rs  mod.rs  print.rs  wait.rs
src/shell/: cd.rs  mod.rs
tests/: README.md  demo.cwrt  integration_test.rs
tests/failure/: expect-failure-got-success.cwrt  expect-success-got-failure.cwrt  expected-closing-delimiter.cwrt  expected-continuation.cwrt  expected-key-value-pair.cwrt  malformed.cwrt  unexpected-continuation.cwrt
tests/input/: builtin.cwrt  comprehensive.cwrt  demo.cwrt  interval-0.cwrt  non-ascii.cwrt  only-front-matter.cwrt  sleep.cwrt  styled.cwrt
tests/output/: builtin.cast  comprehensive.cast  demo.cast  interval-0.cast  non-ascii.cast  only-front-matter.cast  sleep.cast  styled.cast
tests/success/: builtin.cwrt  comprehensive.cwrt  expect.cwrt  non-ascii.cwrt  sleep.cwrt  styled.cwrt
