[package]
name = "castwright"
version = "0.0.1"
edition = "2021"
include = ["/src", "LICENSE", "README.md", "REFERENCE.md"]
repository = "https://github.com/PRO-2684/castwright"
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "Scripted terminal recording."
keywords = ["automation", "terminal", "asciinema", "recording", "asciicast"]

[dependencies]
argh = "0.1.13"
disperror = "0.1.0"
duct = "0.13.7"
serde = "1.0.217"
serde_json = "1.0.137"
terminal_size = "0.4.1"
thiserror = "2.0.11"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true  # Enable link-time optimization.
codegen-units = 1  # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
